# SPECTRA

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-cloudrun.yml  docker.yml
configs/: data.yaml  default.yaml
configs/model/: crossattn_no_rosetta.yaml  full_fusion.yaml  sequence_baseline.yaml
data/: README.md
deploy/: Dockerfile  Dockerfile.cloudrun  Dockerfile.train  README.md  deploy_cloudrun.sh  docker-compose.yml  entrypoint.sh  modal_app.py  requirements-serve.txt  requirements-train.txt  sample_request.json  smoke_test.sh
deploy/hf-space/: Dockerfile  README.md
deploy/loadtest/: README.md  load_test.py
docs/: deployment.md  hpc.md  setup.md  training.md
experiments/: README.md  compare_ablation.py  ensemble_tcr.py
experiments/cluster_jobs/: generate_ablation_jobs.sh  generate_ensemble_jobs.sh  pretrain_stage1.lsf  relax_analyze_array.lsf  train.lsf  train_array.lsf  train_array2.lsf
hpc/: README.md  generate_ablation_jobs.sh  phase0_smoke.lsf  phase1_ablation_fold0.lsf  phase2_cv_winner.lsf  phase3_ensemble.lsf  train_multi_gpu_ddp.lsf  train_single_gpu_array.lsf
notebooks/: README.md
scripts/: run_ablation.sh  run_ensemble.sh
spectra/: __init__.py  config.py
tests/: test_config.py  test_imports.py  test_models.py
(+52 files in other folders)
